<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Trivia</string>
	<string name="menu_settings">Settings</string>
	<string name="wrong_answers">number</string>
	<string name="right_answers">number</string>
	<string name="wrong_answers_text">Wrong Answers: </string>
	<string name="right_answers_text">Right Answers: </string>
	<string name="restartBtn">Restart</string>
	<string name="newBtn">New</string>
	<string name="continueBtn">Continue</string>
	<string name="hello_world">Hello world!</string>
	<string name="title_activity_trivia">TriviaActivity</string>
</resources>