<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:background="#99182C"
    >
<TextView  
    android:id="@+id/trivia"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/app_name"
    android:textColor="#000000"
    android:layout_gravity="center"
    android:textSize="25sp" />

<Button 
    android:id="@+id/btnPlay"
    android:layout_width="fill_parent" 
    android:layout_height="60sp"
    android:text="@string/newBtn"
    android:layout_gravity="center"
    android:textColor="#000000"
    android:onClick="onClickPlay" />    
    
<Button 
    android:id="@+id/btnContinue"
    android:layout_width="fill_parent" 
    android:layout_height="60sp"
    android:text="@string/continueBtn"
    android:layout_gravity="center"
    android:textColor="#000000"
    android:onClick="onClickContinue" />

</LinearLayout>