<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:background="#99182C" >

	<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="25sp"
	        android:text="@string/right_answers_text" />
	    
	    <TextView
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
	        android:text="@string/right_answers"
	        android:id="@+id/right_answers" />
    </LinearLayout>
    
    <LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/wrong_answers_text" />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="25sp"
	        android:text="@string/wrong_answers"
	        android:id="@+id/wrong_answers" />
    </LinearLayout>
        
    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/start_button"                
        android:onClick="onClickRestart" />

</LinearLayout>